# CodeGuide

./: README.md  SUMMARY.md
AI/: README.md.md
AI/AI_Agent/: README.md
AI/Agent/: llm_basic.md
Algorithms/: README.md  cache.md  rbtree.md  regexp_err.md
Algorithms/Docs/: backtracking.md  binary_search.md  divide_conquer.md  map.md
Algorithms/code/: ArrayQueue.cpp  LRUCache.cpp  Map.cpp  TransferQueue.h
C++/: README.md  object_model.md  polymorphism.md
C++/Basic/: array.md  attributes.md  initializer_list.md  lambda.md  memory_pool.md  rvalue_move.md  structured_binding.md
C++/DesignPattern/: principle.md  timewheel.md
C++/OOP/: polymorphism.md
C++/STL/: for_each.md  stl_basic.md
C++/Thread/: atomic.md  condition_variable.md  mutex.md  semaphore.md  thread.md  thread_local.md  thread_pool.md
C++/source/: CMakeLists.txt  EventSystem.h  file.h  main.cpp  thread.h
C++/source/mem_pool/: CMakeLists.txt  example.cpp  memory_pool.cpp  memory_pool.h
Interview/: README.md  cli_grpc.md  config_load.md  im.md  mqtt.md  大疆.md
Network/: README.md
Network/DPI/: schedule.md
Network/Protocol/: Isis.md  arp.md  bgp.md  dhcp.md  ethernet.md  http.md  icmp.md  igmp.md  ip.md  lacp.md  mqtt.md  multicast.md  ospf.md  ppp.md  rip.md  stp.md  tcp.md  tls.md  udp.md  vlan.md
Network/Tools/: ifconfig.md  lsof.md  nc.md  netstat.md  tcpdump.md
System/: README.md
System/IO/: io_uring.md  multiplexing.md
System/Proc/: gdb.md  minigdb.md  pstack.md
basics/: sys_design.md
network/: README.md  cs144.md
project/: LRUCache.cpp  cache_system.md
(+18 files in other folders)
